[Curl] Compile errors related to http headers. https://bugs.webkit.org/show_bug.cgi?id=133901

Patch by peavo@outlook.com <peavo@outlook.com> on 2014-06-14
Reviewed by Brent Fulgham.

Http headers should now be specified with an enum, not a string.

* platform/network/curl/CurlCacheEntry.cpp:
(WebCore::CurlCacheEntry::parseResponseHeaders):
* platform/network/curl/MultipartHandle.cpp:
(WebCore::MultipartHandle::didReceiveResponse):

Canonical link: https://commits.webkit.org/151846@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169970 268f45cc-cd09-0410-ab3c-d52691b4dbfc